--- a/frontend/app/styles/index.css
+++ b/frontend/app/styles/index.css
@@ -2,10 +2,10 @@
     position: relative;
 }
 .content {
-    min-inline-size: 320px;
+    min-inline-size: 300px;
     max-inline-size: 720px;
     min-block-size: 720px;
-    margin: 2em;
+    margin: 5%;
     padding: 2em;
     display: grid;
 
@@ -13,6 +13,11 @@
     gap: 1em;
 }
 
+@media (min-width: 420px) {
+    .content {
+        margin: 10%;
+    }
+}
 .add-task-button {
     position: absolute;
 }
