--- a/frontend/app/styles/new-task.css
+++ b/frontend/app/styles/new-task.css
@@ -2,8 +2,28 @@
     min-inline-size: 300px;
     max-inline-size: 720px;
     min-block-size: 720px;
-    margin: 5%;
+    margin-block: 5%;
+    margin-inline: auto;
     padding: 2em;
+    position: relative;
+}
+
+.close-btn {
+    border: 2px solid var(--font-title-clr);
+    inline-size: 36px;
+    block-size: 36px;
+    border-radius: 99999px;
+    padding: 0.625em;
+    display: grid;
+    place-content: center;
+    color: black;
+    margin-inline-start: auto;
+    opacity: 0.6;
+    transition: opacity 0.2s;
+}
+
+.close-btn:hover {
+    opacity: 1;
 }
 
 .form {
