--- a/frontend/app/styles/new-task.css
+++ b/frontend/app/styles/new-task.css
@@ -2,8 +2,7 @@
     min-inline-size: 300px;
     max-inline-size: 720px;
     min-block-size: 720px;
-    margin-block: 5%;
-    margin-inline: auto;
+    margin: 5%;
     padding: 2em;
     position: relative;
 }
@@ -11,6 +10,13 @@
 @media (min-width: 420px) {
     .container {
         margin: 10%;
+    }
+}
+
+@media (min-width: 720px) {
+    .container {
+        margin-block: 5%;
+        margin-inline: auto;
     }
 }
 
