--- a/frontend/app/styles/global.css
+++ b/frontend/app/styles/global.css
@@ -56,3 +56,22 @@ button {
         margin-inline: auto;
     }
 }
+
+
+.close-btn {
+    border: 2px solid var(--font-title-clr);
+    inline-size: 36px;
+    block-size: 36px;
+    border-radius: 99999px;
+    padding: 0.625em;
+    display: grid;
+    place-content: center;
+    color: black;
+    margin-inline-start: auto;
+    opacity: 0.6;
+    transition: opacity 0.2s;
+}
+
+.close-btn:hover {
+    opacity: 1;
+}
