--- a/frontend/app/styles/global.css
+++ b/frontend/app/styles/global.css
@@ -111,3 +111,10 @@ button {
     gap: 1em;
     padding-inline-start: .8em;
 }
+
+@media (max-width: 520px){
+    .task__form-expiration-category-span {
+        grid-auto-flow: row;
+        place-content: center;
+    }
+}
