--- a/views/index.html
+++ b/views/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML 5 Boilerplate</title>
+    <title>todo-list</title>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <a data-hx-get="/click">Click Me!</a>
+    <div class="m-12 p-12 outline outline-purple-200">
+      <h1 class="text-4xl font-bold underline">Hello world!</h1>
+      <a class="bg-red" data-hx-get="/click">Click Me!</a>
+    </div>
     <script src="bundle.js"></script>
   </body>
 </html>
