--- a/views/bundle.css
+++ b/views/bundle.css
@@ -1,5 +1,4 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@400;900&family=Roboto&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@400;900&family=Roboto&display=swap");
