--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,7 +21,7 @@ categorias</p>
 	    <%- include('partials/label', {label}); %>
 	 <% }); %>
         </section>
-        <div class="overflow-hidden h-full">
+        <div class="overflow-hidden h-full pb-8">
           <p class="mt-2 mb-4 font-semibold text-slate-400 tracking-wide">
             Today tasks
           </p>
