--- a/views/partials/label.ejs
+++ b/views/partials/label.ejs
@@ -5,5 +5,5 @@
     </p>
     <p><%= label.name %></p>
   </div>
-  <div class="w-full h-1 bg-slate-800 mt-auto"></div>
+  <div class="w-full h-1 mt-auto" style="background-color: <%= label.color %>" ></div>
 </div>
